# SimpleRobotFollowingPerson_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: team1_follower.launch.py  team1_visualization.launch.py  team1_world.launch.py
models/team_1_room/: model.config  model.sdf
rviz/: model.rviz  team1_model.rviz
src/: angle_from_pixel_node.py  control_node.py  distance_from_yolo_node.py  lidar_distance_node.py  object_detection_node.py
worlds/: team1_world.world  team1_world_human_room.world  team1_world_human_room_edit1.world
